# wk2_de_zoomcamp

./: .gitignore  docker-compose.yaml  pyproject.toml
src/pipeline/scripts/: py_script.py
terraform/: main.tf  providers.tf  variables.tf
